add_source_target(xdmrg++-tensors-state-finite
        TARGET_SOURCES
        StateFinite/cx32.cpp
        StateFinite/cx64.cpp
        StateFinite/cx128.cpp
        StateFinite/fp32.cpp
        StateFinite/fp64.cpp
        StateFinite/fp128.cpp

        StateFinite/contract.cx32.cpp
        StateFinite/contract.cx64.cpp
        StateFinite/contract.cx128.cpp
        StateFinite/contract.fp32.cpp
        StateFinite/contract.fp64.cpp
        StateFinite/contract.fp128.cpp

        StateFinite/cx32/cx32.cpp
        StateFinite/cx32/cx64.cpp
        StateFinite/cx32/cx128.cpp
        StateFinite/cx32/fp32.cpp
        StateFinite/cx32/fp64.cpp
        StateFinite/cx32/fp128.cpp
        StateFinite/cx64/cx32.cpp
        StateFinite/cx64/cx64.cpp
        StateFinite/cx64/cx128.cpp
        StateFinite/cx64/fp32.cpp
        StateFinite/cx64/fp64.cpp
        StateFinite/cx64/fp128.cpp
        StateFinite/cx128/cx32.cpp
        StateFinite/cx128/cx64.cpp
        StateFinite/cx128/cx128.cpp
        StateFinite/cx128/fp32.cpp
        StateFinite/cx128/fp64.cpp
        StateFinite/cx128/fp128.cpp
        StateFinite/fp32/cx32.cpp
        StateFinite/fp32/cx64.cpp
        StateFinite/fp32/cx128.cpp
        StateFinite/fp32/fp32.cpp
        StateFinite/fp32/fp64.cpp
        StateFinite/fp32/fp128.cpp
        StateFinite/fp64/cx32.cpp
        StateFinite/fp64/cx64.cpp
        StateFinite/fp64/cx128.cpp
        StateFinite/fp64/fp32.cpp
        StateFinite/fp64/fp64.cpp
        StateFinite/fp64/fp128.cpp
        StateFinite/fp128/cx32.cpp
        StateFinite/fp128/cx64.cpp
        StateFinite/fp128/cx128.cpp
        StateFinite/fp128/fp32.cpp
        StateFinite/fp128/fp64.cpp
        StateFinite/fp128/fp128.cpp



        OBJECT_LINK_LIBRARIES
        xdmrg++-deps xdmrg++-flags
        INTERFACE_LINK_LIBRARIES
        xdmrg++-debug
        xdmrg++-tensors-mps
        xdmrg++-math-tenx
        xdmrg++-tools-finite-measure
        xdmrg++-tools-finite-multisite
        xdmrg++-tools-common-contraction
        xdmrg++-tools-common-log
        )
add_source_target(xdmrg++-tensors-state-infinite
        TARGET_SOURCES
        StateInfinite/cx32.cpp
        StateInfinite/cx64.cpp
        StateInfinite/cx128.cpp
        StateInfinite/fp32.cpp
        StateInfinite/fp64.cpp
        StateInfinite/fp128.cpp

        StateInfinite/cx32/cx32.cpp
        StateInfinite/cx32/cx64.cpp
        StateInfinite/cx32/cx128.cpp
        StateInfinite/cx32/fp32.cpp
        StateInfinite/cx32/fp64.cpp
        StateInfinite/cx32/fp128.cpp
        StateInfinite/cx64/cx32.cpp
        StateInfinite/cx64/cx64.cpp
        StateInfinite/cx64/cx128.cpp
        StateInfinite/cx64/fp32.cpp
        StateInfinite/cx64/fp64.cpp
        StateInfinite/cx64/fp128.cpp
        StateInfinite/cx128/cx32.cpp
        StateInfinite/cx128/cx64.cpp
        StateInfinite/cx128/cx128.cpp
        StateInfinite/cx128/fp32.cpp
        StateInfinite/cx128/fp64.cpp
        StateInfinite/cx128/fp128.cpp
        StateInfinite/fp32/cx32.cpp
        StateInfinite/fp32/cx64.cpp
        StateInfinite/fp32/cx128.cpp
        StateInfinite/fp32/fp32.cpp
        StateInfinite/fp32/fp64.cpp
        StateInfinite/fp32/fp128.cpp
        StateInfinite/fp64/cx32.cpp
        StateInfinite/fp64/cx64.cpp
        StateInfinite/fp64/cx128.cpp
        StateInfinite/fp64/fp32.cpp
        StateInfinite/fp64/fp64.cpp
        StateInfinite/fp64/fp128.cpp
        StateInfinite/fp128/cx32.cpp
        StateInfinite/fp128/cx64.cpp
        StateInfinite/fp128/cx128.cpp
        StateInfinite/fp128/fp32.cpp
        StateInfinite/fp128/fp64.cpp
        StateInfinite/fp128/fp128.cpp

        OBJECT_LINK_LIBRARIES
        xdmrg++-deps xdmrg++-flags
        INTERFACE_LINK_LIBRARIES
        xdmrg++-debug
        xdmrg++-math-tenx
        xdmrg++-tensors-mps
        xdmrg++-tools-common-contraction
        xdmrg++-tools-infinite-measure
        xdmrg++-tools-infinite-mps
        xdmrg++-tools-common-log
        xdmrg++-tools-common-split
        xdmrg++-tools-common-views
        )

add_library(xdmrg++-tensors-state INTERFACE)
target_link_libraries(xdmrg++-tensors-state INTERFACE
        xdmrg++-tensors-state-finite
        xdmrg++-tensors-state-infinite)